Fix figure dimensions, and flesh out bib

--- a/ivcj_lfw.bib
+++ b/ivcj_lfw.bib
@@ -4,21 +4,21 @@
 @article{guillaumin2009you,
   title={{Is that you? Metric learning approaches for face identification}},
   author={Guillaumin, M. and Verbeek, J. and Schmid, C.},
-  journal={ICCV},
+  journal={International Conference on Computer Vision},
   year={2009}
 }
 
 @article{cao2010face,
   title={{Face Recognition With Learning-Based Descriptor}},
   author={Cao, Z. and Yin, Q. and Tang, X. and Sun, J.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={2010}
 }
 
 @article{turk1991face,
   title={{Face Recognition Using Eigenfaces}},
   author={Turk, M. and Pentland, A.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={1991}
 }
 
@@ -26,48 +26,59 @@
   title={{Face recognition: A literature survey}},
   author={Zhao, W. and Chellappa, R. and Phillips, PJ and Rosenfeld, A.},
   journal={ACM Computing Surveys},
-  year={2003}
+  volume = {35},
+ issue = {4},
+ month = {December},
+ year = {2003},
+ issn = {0360-0300},
+ pages = {399--458},
 }
 
 @article{hua2009robust,
   title={{A robust elastic and partial matching metric for face recognition}},
   author={Hua, G. and Akbarzadeh, A.},
-  journal={ICCV},
+  journal={International Conference on Computer Vision},
   year={2009}
 }
 
 @article{belhumeur2002eigenfaces,
   title={{Eigenfaces Vs. Fisherfaces: Recognition Using Class Specific Linear Projection}},
   author={Belhumeur, P.N. and Hespanha, J.P. and Kriegman, D.J.},
-  journal={PAMI},
-  year={2002}
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year={2002},
+  volume={19},
+  issue={7},
+  pages={711--720}
 }
 
 @article{he2005face,
   title={{Face recognition using laplacianfaces}},
   author={He, X. and Yan, S. and Hu, Y. and Niyogi, P. and Zhang, H.J.},
-  journal={PAMI},
-  year={2005}
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year={2005},
+  volume={27},
+  issue={3},
+  pages={328--340}
 }
 
 @article{hua2007face,
   title={{Face recognition using discriminatively trained orthogonal rank one tensor projections}},
   author={Hua, G. and Viola, P.A. and Drucker, S.M.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={2007}
 }
 
 @article{wright2009implicit,
   title={{Implicit elastic matching with random projections for pose-variant face recognition}},
   author={Wright, J. and Hua, G.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={2009},
 }
 
 @article{yang2002kernel,
   title={{Kernel Eigenfaces Vs. Kernel Fisherfaces: Face Recognition Using Kernel Methods}},
   author={Yang, M.H.},
-  journal={FG},
+  journal={IEEE Conference on Automatic Face and Gesture Recognition},
   year={2002}
 }
 
@@ -75,20 +86,23 @@
   title={{A Comparative Study of Local Matching Approach for Face Recognition}},
   author={Zou, J. and Ji, Q. and Nagy, G.},
   journal={IEEE Transactions on Image Processing},
-  year={2007}
+  year={2007},
+  volume={16},
+  issue={10},
+  pages={2617--2628}
 }
 
 @article{vasilescu2002multilinear,
   title={{Multilinear image analysis for facial recognition}},
   author={Vasilescu, M. and Terzopoulos, D.},
-  journal={ICPR},
+  journal={International Conference on Pattern Recognition},
   year={2002}
 }
 
 @article{pentland1994view,
   title={{View-based and modular eigenspaces for face recognition}},
   author={Pentland, A. and Moghaddam, B. and Starner, T.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={1994}
 }
 
@@ -114,34 +128,34 @@
 
 @inproceedings{ames2007wtm,
 	Author = {Ames, M. and Naaman, M.},
-	Booktitle = {Proc.~SIGCHI Conf.~on Human Factors in Computing Systems},
+	Booktitle = {SIGCHI Conference on Human Factors in Computing Systems},
 	Pages = {971--980},
 	Title = {{Why We Tag: Motivations for Annotation in Mobile and Online Media}},
 	Year = {2007}}
 
 @conference{stone2008afs,
 	Author = {Stone, Z. and Zickler, T. and Darrell, T.},
-	Booktitle = {Proc.~First IEEE Workshop on Internet Vision},
+	Booktitle = {IEEE Workshop on Internet Vision},
 	Title = {{Autotagging Facebook: Social Network Context Improves Photo Annotation}},
 	Year = {2008}}
 
  @article{stone2010tls,
 	Author = {Stone, Z. and Zickler, T. and Darrell, T.},
-	Booktitle = {Proc.~IEEE Special Edition on Internet Vision (To Appear)},
+	Booktitle = {IEEE Special Edition on Internet Vision},
 	Title = {{Toward Large-Scale Face Recognition Using Social Network Context}},
 	Year = {2010}}
 
 @article{ahonen2004face,
   title={{Face Recognition With Local Binary Patterns}},
   author={Ahonen, T. And Hadid, A. And Pietikainen, M.},
-  journal={ECCV},
+  journal={European Conference on Computer Vision},
   year={2004},
 }
 
 @article{luo2007person,
   title={{Person-specific SIFT features for face recognition}},
   author={Luo, J. and Ma, Y. and Takikawa, E. and Lao, S. and Kawade, M. and Lu, B.L.},
-  journal={ICASSP},
+  journal={International Conference on Acoustics, Speech and Signal Processing},
   year={2007}
 }
 
@@ -150,35 +164,39 @@
   author={Albiol, A. and Monzo, D. and Martin, A. and Sastre, J. and Albiol, A.},
   journal={Pattern Recognition Letters},
   year={2008},
+  volume = {29},
+ issue = {10},
+ pages = {1537--1543},
 }
 
 @article{ahonen2006face,
   title={{Face Description With Local Binary Patterns: Application To Face Recognition}},
   author={Ahonen, T. and Hadid, A. and others},
-  journal={PAMI},
-  year={2006},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+    volume = {28},
+    pages = {2037--2041}
 }
 
 @article{dalal2005hog,
   title={{Histograms of oriented gradients for human detection}},
   author={Dalal, N. and Triggs, B.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={2005}
 }
 
 @conference{everingham2006hello,
        Author = {Everingham, M. and Sivic, J. and Zisserman, A.},
-       Booktitle = {Proceedings of the British Machine Vision Conference},
+       Booktitle = {British Machine Vision Conference},
        Date-Added = {2010-03-15 03:45:11 -0400},
        Date-Modified = {2010-03-15 03:45:11 -0400},
        Organization = {Citeseer},
-       Title = {Hello! my name is... buffy--automatic naming of characters in tv video},
+       Title = {Hello! my name is... Buffy--automatic naming of characters in tv video},
        Volume = {2},
        Year = {2006}}
 
 @conference{berg2004names,
        Author = {Berg, T. and Berg, A. and Edwards, J. and Maire, M. and White, R. and Teh, Y.W. and Learned-Miller, E. and Forsyth, D.},
-       journal = {CVPR},
+       journal = {IEEE Conference on Computer Vision and Pattern Recognition},
        Date-Added = {2010-03-15 03:43:34 -0400},
        Date-Modified = {2010-03-15 03:43:34 -0400},
        Organization = {IEEE Computer Society; 1999},
@@ -196,21 +214,13 @@
 
 @conference{ramanan2007leveraging,
        Author = {Ramanan, D. and Baker, S. and Kakade, S.},
-       journal = {ICCV},
+       journal = {International Conference on Computer Vision},
        Date-Added = {2010-03-15 03:43:06 -0400},
        Date-Modified = {2010-03-15 03:43:06 -0400},
        Organization = {Citeseer},
        Title = {Leveraging archival video for building face datasets},
        Year = {2007}}
 
-{
-@article{pinto:eccv10,
-author={N. Pinto and D. D. Cox},
-title={{High-throughput screening of neuromorphic vision models in an unconstrained face recognition task}},
-journal={Submitted to ECCV 2010},
-year={2010},
-}
-}
 
 @article{libsvm,
   author =	 {Chih-Chung Chang and Chih-Jen Lin},
@@ -229,35 +239,41 @@ year={2010},
 @article{rifkin2004defense,
   title={{In defense of one-vs-all classification}},
   author={Rifkin, R. and Klautau, A.},
-  journal={JMLR},
+  journal={Journal of Machine Learning Research},
   year={2004},
+  volume={5},
+  pages={101--141}
 }
 
 @article{sonnenburg2006lsm,
 author={S. Sonnenburg and G. R{\"a}tsch and C. Sch{\"a}fer and B. Sch{\"o}lkopf},
 title={{Large Scale Multiple Kernel Learning}},
-journal={JMLR},
+journal={Journal of Machine Learning Research},
 year={2006},
+volume ={7},
+pages={1531--1565}
 }
 
-@article{pinto:plos09,
-    author = {Pinto, Nicolas AND Doukhan, David AND DiCarlo, James J. AND Cox, David D.},
-    journal = {PLoS Comput Biol},
-    title = {A High-Throughput Screening Approach to Discovering Good Forms of Biologically Inspired Visual Representation},
-    year = {2009},
-}        
+@article{ pinto:plos09,
+    author={Pinto, N. and Doukhan, D. and DiCarlo, J. J. and Cox, D. D.},
+    title={{A High-Throughput Screening Approach to Discovering Good Forms of Biologically Inspired Visual Representation}},
+    journal={PLoS Computational Biology},    
+    volume={5},
+    number={11},
+    year={2009}
+}
 
 @article{koray-cvpr-09,  
  title = {Learning Invariant Features through Topographic Filter Maps},   
  author = {Kavukcuoglu, Koray and Ranzato, Marc'Aurelio and Fergus, Rob and LeCun, Yann},   
- journal = {CVPR},   
+ journal = {IEEE Conference on Computer Vision and Pattern Recognition},   
  year = {2009},   
 }
 
 @article{jarrett-iccv-09,  
  title = {What is the Best Multi-Stage Architecture for Object Recognition?},   
  author = {Jarrett, Kevin and Kavukcuoglu, Koray and Ranzato, Marc'Aurelio and LeCun, Yann},   
- journal = {ICCV},   
+ journal = {International Conference on Computer Vision},   
  year = {2009},   
 }
 
@@ -273,8 +289,8 @@ year={2006},
 
 @article{kumar:iccv09, 
 author = {N. Kumar and A. C. Berg and P. N. Belhumeur and S. K. Nayar},
-title = {{A}ttribute and {S}imile {C}lassifiers for {F}ace {V}erification},
-journal = {ICCV},
+title = {Attribute and Simile Classifiers for Face Verification},
+journal = {International Conference on Computer Vision},
 year = {2009}
 }
 
@@ -290,15 +306,25 @@ year = {2009}
 @article{fukushima1980neocognitron,
   title={{Neocognitron: A self-organizing neural network model for a mechanism of pattern recognition unaffected by shift in position}},
   author={Fukushima, K.},
-  journal={Biol Cybernetics},
-  year={1980},
+   journal = {Biological Cybernetics},
+   publisher = {Springer Berlin / Heidelberg},
+   issn = {0340-1200},
+   keyword = {Computer Science},
+   pages = {193-202},
+   volume = {36},
+   issue = {4},
+   url = {http://dx.doi.org/10.1007/BF00344251},
+   note = {10.1007/BF00344251},
+   year = {1980}
 }
 
 @article{serre2007ror,
   title={{Robust object recognition with cortex-like mechanisms}},
   author={Serre, T. and Wolf, L. and Bileschi, S. and Riesenhuber, M. and Poggio, T.},
-  journal={PAMI},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
   year={2007},
+    volume = {29},
+    pages = {411--426}
 }
 
 @article{Owens:2007:ASO,
@@ -355,7 +381,7 @@ year = {2009}
 @article{FranWilbWisk2008b,
 title={{Invariant Object Recognition with Slow Feature Analysis.}},
 author={Mathias Franzius and Niko Wilbert and Laurenz Wiskott},
-journal={Proc.\ 18th Intl.\ Conf.\ on Artificial Neural Networks, ICANN'08, Prague"},
+journal={International Conference on Artificial Neural Networks},
 year={2008},
 }
 
@@ -373,22 +399,26 @@ year={2008},
  @article{pinto:plos08,
  author={Pinto, N. and Cox, D. D. and DiCarlo, J. J. },
  title={{Why is Real-World Visual Object Recognition Hard}},
- journal={PLoS Comput Biol},
- year={2008}
+ journal={PloS Computational Biology},
+ year={2008},
+ volume={4},
+    number={1},
  }
 
  @article{pinto:eccv08,
- author={N. Pinto and J. J. DiCarlo and D. D. Cox},
+ author={Pinto, N. and DiCarlo, J.J. and Cox, D.D.},
  title={{Establishing Good Benchmarks and Baselines for Face Recognition}},
- journal={ECCV},
+ journal={European Conference on Computer Vision},
  year={2008},
  }
 
  @article{dicarlo:tics07,
- author={J. J. DiCarlo and D. D. Cox},
+ author={DiCarlo, J.J. and Cox, D. D.},
  title={{Untangling invariant object recognition}},
- journal={TICS},
+ journal={Trends in Cognitive Sciences},
  year={2007},
+ volume={11},
+ pages={333-341},
  }
 
 
@@ -396,7 +426,7 @@ year={2008},
  @article{shamir2008efd,
  author={L. Shamir},
  title={{Evaluation of Face Datasets as Tools for Assessing the Performance of Face Recognition Methods}},
- journal={IJCV},
+ journal={International Journal of Computer Vision},
  year={2008},
  }
 
@@ -433,8 +463,11 @@ year={2008},
  @article{einhauser2005lvi,
  title={{Learning viewpoint invariant object representations using a temporal coherence principle}},
  author={Einh{\"a}user, W. and Hipp, J. and Eggert, J. and K{\"o}rner, E. and K{\"o}nig, P.},
- journal={Biol Cybernetics},
+ journal={Biological Cybernetics},
  year={2005},
+ volume={93},
+ issue={1},
+ pages = {79--90},
  }
 
  @article{cox2005bpi,
@@ -443,7 +476,7 @@ year={2008},
  journal={Nature Neuroscience},
  volume={8},
  number={9},
- pages={1145},
+ pages={1145-1147},
  year={2005},
  publisher={Nature Publishing Group}
  }
@@ -481,28 +514,28 @@ year={2008},
  @article{huang:lfw,
  author={G. B. Huang and M. Ramesh  and T. Berg and E. Learned-Miller},
  title={{Labeled Faces in the Wild}},
- journal={TR UMass},
+ journal={University of Massachusetts Technical Report},
  year={2007},
  }
 
  @article{feifei2007lgv,
  author={L. Fei-Fei and R. Fergus and P. Perona},
  title={{Learning generative visual models from few training examples: an incremental Bayesian approach tested on 101 object categories}},
- journal={CVPR},
+ journal={IEEE Conference on Computer Vision and Pattern Recognition},
  year={2004},
  }
 
  @article{pinto:cvpr09,
  author={N. Pinto and J. J. DiCarlo and D. D. Cox},
  title={{How Far Can You Get With A Modern Face Recognition Test Set Using Only Simple Features?}},
- journal={CVPR},
+ journal={IEEE Conference on Computer Vision and Pattern Recognition},
  year={2009},
  }
 
  @article{caltech256,
  Author = {G. Griffin and A. Holub and P. Perona},
  Title = {The Caltech-256 Object Category Dataset},
- journal = {TR Caltech},
+ journal = {Caltech Technical Report},
  Year = {2007},
  }
 
@@ -519,50 +552,56 @@ year={2008},
  @article{mutch2008ocr,
    title={{Object class recognition and localization using sparse features with limited receptive fields}},
    author={Mutch, J. and Lowe, D. G.},
-   journal={IJCV},
+   journal={International Journal of Computer Vision},
    year={2008},
+   volume={80},
+   issue={1},
+   pages={45--57}
  }
 
  @article{sift,
    title={{Distinctive image features from scale-invariant keypoints}},
    author={Lowe, D. G.},
-   journal={IJCV},
+   journal={International Journal of Computer Vision},
    year={2004},
  }
 
  @article{phow,
    title={{Beyond bags of features: Spatial pyramid matching for recognizing natural scene categories}},
    author={Lazebnik, S. and Schmid, C. and Ponce, J.},
-   journal={CVPR},
+   journal={IEEE Conference on Computer Vision and Pattern Recognition},
    year={2006}
  }
 
  @article{phog,
    title={{Representing shape with a spatial pyramid kernel}},
    author={Bosch, A. and Zisserman, A. and Munoz, X.},
-   journal={CIVR},
+   journal={ACM Conference on Computer Image and Video Retrieval},
    year={2007},
  }
 
 @article{gehler:iccv09, 
  author = {Gehler, P. and Nowozin, S.},
  title = {On Feature Combination for Multiclass Object Classification},
- journal = {ICCV}, 
+ journal = {International Conference on Computer Vision}, 
  year = {2009}
 }
 
  @article{gb,
    title={{Geometric blur and template matching}},
    author={Berg, A. C. and Malik, J.},
-   journal={CVPR},
+   journal={IEEE Conference on Computer Vision and Pattern Recognition},
    year={2001},
  }
 
 @article{gross2009multi,
   title={{Multi-PIE}},
   author={Gross, R. and Matthews, I. and Cohn, J. and Kanade, T. and Baker, S.},
-  journal={Image and Vision Computing},
+  journal={Image and Vision Computing Journal},
   year={2009},
+  volume={28},
+  number={5},
+  pages={807--813},
   publisher={Elsevier}
 }
 
@@ -586,7 +625,7 @@ year={2008},
 @article{particle_swarm,
     author = {Kennedy, J. and Eberhart, R.},
     title = {{Particle swarm optimization}},
-    journal = {ICNN},
+    journal = {International Conference on Neural Networks},
     year = {1995}
 }   
 
@@ -642,7 +681,7 @@ year={Accessed 06/30/2011},
 @article{phillips2000feret,
   title={{The FERET evaluation methodology for face-recognition algorithms}},
   author={Phillips, P.J. and Moon, H. and Rizvi, S.A. and Rauss, P.J.},
-  journal={PAMI},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
   year={2000}
 }
 
@@ -663,7 +702,7 @@ year={Accessed 06/30/2011},
 @article{lecun,
   title={{Learning methods for generic object recognition with invariance to pose and lighting}},
   author={LeCun, Y. and Huang, F. and Bottou, L.},
-  journal={CVPR},
+  journal={IEEE Conference on Computer Vision and Pattern Recognition},
   year={2004}
 } 
 
