FIX: minor edits

--- a/ivcj_lfw.bib
+++ b/ivcj_lfw.bib
@@ -148,7 +148,7 @@
 @article{ahonen2004face,
   title={{Face Recognition With Local Binary Patterns}},
   author={Ahonen, T. And Hadid, A. And Pietikainen, M.},
-  journal={European Conference on Computer Vision},
+  journal={IEEE European Conference on Computer Vision},
   year={2004},
 }
 
@@ -170,11 +170,14 @@
 }
 
 @article{ahonen2006face,
-  title={{Face Description With Local Binary Patterns: Application To Face Recognition}},
-  author={Ahonen, T. and Hadid, A. and others},
+  title={Face description with local binary patterns: Application to face recognition},
+  author={Ahonen, T. and Hadid, A. and Pietikainen, M.},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
-    volume = {28},
-    pages = {2037--2041}
+  volume={28},
+  number={12},
+  pages={2037--2041},
+  year={2006},
+  publisher={IEEE}
 }
 
 @article{dalal2005hog,
@@ -313,8 +316,6 @@ year = {2009}
    pages = {193-202},
    volume = {36},
    issue = {4},
-   url = {http://dx.doi.org/10.1007/BF00344251},
-   note = {10.1007/BF00344251},
    year = {1980}
 }
 
@@ -406,9 +407,9 @@ year={2008},
  }
 
  @article{pinto:eccv08,
- author={Pinto, N. and DiCarlo, J.J. and Cox, D.D.},
+ author={Pinto, N. and DiCarlo, J. J. and Cox, D. D.},
  title={{Establishing Good Benchmarks and Baselines for Face Recognition}},
- journal={European Conference on Computer Vision},
+ journal={IEEE European Conference on Computer Vision},
  year={2008},
  }
 
@@ -583,7 +584,7 @@ year={2008},
 @article{gehler:iccv09, 
  author = {Gehler, P. and Nowozin, S.},
  title = {On Feature Combination for Multiclass Object Classification},
- journal = {International Conference on Computer Vision}, 
+ journal = {IEEE International Conference on Computer Vision}, 
  year = {2009}
 }
 
@@ -653,7 +654,7 @@ year={Accessed 06/30/2011},
 
 @misc{yale,
 author={{Yale Face Set}},
-title="http://vision.ucsd.edu/~leekc/ExtYaleDatabase/ExtYaleB.html",
+title="http://vision.ucsd.edu/\~leekc/ExtYaleDatabase/ExtYaleB.html",
 key={Z},
 year={Accessed 06/30/2011},
 }
@@ -667,7 +668,7 @@ year={Accessed 06/30/2011},
 
 @misc{ar,
 author={{AR Face Set}},
-title="http://www2.ece.ohio-state.edu/~aleix/ARdatabase.html",
+title="http://www2.ece.ohio-state.edu/\~aleix/ARdatabase.html",
 key={Z},
 year={Accessed 06/30/2011},
 }
