--- a/methods.tex
+++ b/methods.tex
@@ -386,7 +386,7 @@ explored here, the possible output dimensionality ranged from 256 to 73,984.
 
 A total of 5,915 \emph{HT-L2} and 6,917 \emph{HT-L3} models were screened on the \emph{LFW}
 View 1 ``aligned'' set \cite{taigman:bmvc09}.  We selected the best five models
-from each ``pool'' for further analysis on the \emph{LFW} View 2 set (Restricted
+from each group for further analysis on the \emph{LFW} View 2 set (Restricted
 Protocol).  Note that \emph{LFW} View 1 and View 2 do not contain the same
 individuals and are thus mutually exclusive sets. View 1 was designed as a model
 selection set while View 2 is used as an independent validation set for the
