--- a/results.tex
+++ b/results.tex
@@ -129,7 +129,12 @@ similar expression.
 
 \subsubsection{Performance as a function of variation level}
 
-The synthetic face evaluation sets used here provide us with the ability to parametrically control the level of rotation, position and scale variation that our models are required to tolerate.  Figure \ref{fig:perf_variation_levels} shows the performance the best models from each model class (V1-like, HT-L2, HT-L3) as a function of (composite) variation level for an eight-way face classification task.
+The synthetic face evaluation sets used here provide us with the ability
+to parametrically control the level of rotation, position and scale
+variation that our models are required to tolerate.  Figure
+\ref{fig:perf_variation_levels} shows the performance of the best models
+from each model class (V1-like, HT-L2, HT-L3) as a function of
+(composite) variation level for an eight-way face classification task.
 
 
 \subsubsection{Effect of number of faces to be discriminated}
