Add Sam's comments

--- a/discussion.tex
+++ b/discussion.tex
@@ -17,10 +17,10 @@ structured filter kernels, nor were they subjected to any unsupervised learning.
 Whether adding these features back will result in higher levels of performance
 is an important future research question.  It should also be noted that, in terms of biological-inspiration, the model family tested here almost certainly represents just a small fraction of the complexity of the brain's visual system.  In addition, no claims are made that the three layers of the models presented here correspond in any strong way with the first three visual cortical areas.
 
-While there still remains substantial room for improvement, concerns that
+While there still is substantial room for improvement, concerns remain that
 the \emph{LFW} set does not necessarily accurately reflect the ``full'' problem
 of unconstrained face recognition
-remain \cite{pinto:eccv08,pinto:cvpr09,kumar:iccv09}.  \emph{LFW} includes only
+\cite{pinto:eccv08,pinto:cvpr09,kumar:iccv09}.  \emph{LFW} includes only
 a handful of examples per individual, and these photographs were often taken in
 the same setting and at the same event.  Furthermore, Kumar et
 al. \cite{kumar:iccv09} showed that human observers were able to perform at
@@ -63,7 +63,7 @@ a promising path forward in the construction of transformation-invariant
 representations.
 
 As continued research manages to chip away at the remaining ``performance gap''
-between human and machines on the \emph{LFW} set, increased attention will need
+between humans and machines on the \emph{LFW} set, increased attention will need
 to be paid to whether \emph{LFW} truly represents the problem of interest.  On
 one hand, as long as some performance gap exists, the set is obviously valid at
 a basic level.  However, the question remains whether a ``fuller'' formulation
