--- a/ivcj_lfw.tex
+++ b/ivcj_lfw.tex
@@ -32,7 +32,7 @@
 \begin{frontmatter}
 
 \title{
-High-Throughput-derived Biologically-Inspired Features for Unconstrained Face Recognition
+High-Throughput-Derived Biologically-Inspired Features for Unconstrained Face Recognition
 }
 
 \author[rowland,mit]{Nicolas Pinto}
