--- a/results.tex
+++ b/results.tex
@@ -147,7 +147,7 @@ Figure \ref{fig:nfaces_by_variation}.  Predictably, absolute performance level i
 number of faces is considered, as is the chance performance level (dotted line). Interestingly, the
 rate at which performance falls off varies between models as a function of both number of faces
 to be discriminated, and as a function of variation level.  The stability of the performance of the
-largest/deepest model --- HT-L3-1st --- is most pronounced when large number of faces and large amounts of variation
+largest/deepest model --- HT-L3-1st --- is most pronounced when a large number of faces and large amounts of variation
 are considered.  Differences between models are far less pronounced with smaller numbers of
 faces and lesser degrees of variation.
 
